; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-main.c_pop_future.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-main.c_pop_future.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@currentpage = common dso_local global i32 0, align 4
@future_count = common dso_local global i64 0, align 8
@future = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @pop_future to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pop_future() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @currentpage, align 4
  store i32 %2, i32* %1, align 4
  %3 = call i32 (...) @push_history()
  br label %4

4:                                                ; preds = %14, %0
  %5 = load i64, i64* @future_count, align 8
  %6 = icmp ugt i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %4
  %8 = load i32, i32* @currentpage, align 4
  %9 = load i32, i32* %1, align 4
  %10 = call i64 @eqloc(i32 %8, i32 %9)
  %11 = icmp ne i64 %10, 0
  br label %12

12:                                               ; preds = %7, %4
  %13 = phi i1 [ false, %4 ], [ %11, %7 ]
  br i1 %13, label %14, label %21

14:                                               ; preds = %12
  %15 = load i32*, i32** @future, align 8
  %16 = load i64, i64* @future_count, align 8
  %17 = add i64 %16, -1
  store i64 %17, i64* @future_count, align 8
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @restore_mark(i32 %19)
  br label %4

21:                                               ; preds = %12
  %22 = call i32 (...) @push_history()
  ret void
}

declare dso_local i32 @push_history(...) #1

declare dso_local i64 @eqloc(i32, i32) #1

declare dso_local i32 @restore_mark(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
